--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@awesome-cordova-plugins/call-number": "^6.3.0",
     "@capacitor/android": "4.7.0",
     "@capacitor/app": "4.1.1",
     "@capacitor/core": "4.7.0",
@@ -28,6 +29,7 @@
     "@capacitor/status-bar": "4.1.1",
     "@ionic-native/http": "^5.36.0",
     "@ionic/angular": "^6.1.9",
+    "call-number": "^1.0.1",
     "ionic-native": "^2.9.0",
     "ionicons": "^6.0.3",
     "onesignal-cordova-plugin": "^3.3.0",
