--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "call-number": "^1.0.1",
     "ionic-native": "^2.9.0",
     "ionicons": "^6.0.3",
+    "mapbox-gl": "^2.13.0",
     "onesignal-cordova-plugin": "^3.3.0",
     "onesignal-ngx": "^1.0.2",
     "rxjs": "~7.5.0",
@@ -51,6 +52,7 @@
     "@capacitor/cli": "4.7.0",
     "@ionic/angular-toolkit": "^6.0.0",
     "@types/jasmine": "~4.0.0",
+    "@types/mapbox-gl": "^2.7.10",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
