--- a/package.json
+++ b/package.json
@@ -24,13 +24,12 @@
     "@capacitor/app": "4.1.1",
     "@capacitor/core": "4.7.0",
     "@capacitor/haptics": "4.1.0",
+    "@capacitor/ios": "4.7.0",
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/push-notifications": "^4.1.2",
-    "@capacitor/status-bar": "4.1.1",
-    "@ionic-native/http": "^5.36.0",
+    "@capacitor/status-bar": "^4.1.1",
     "@ionic/angular": "^6.1.9",
     "call-number": "^1.0.1",
-    "ionic-native": "^2.9.0",
     "ionicons": "^6.0.3",
     "mapbox-gl": "^2.13.0",
     "onesignal-cordova-plugin": "^3.3.0",
